fix many bug
